Closed Bug 528941 Opened 15 years ago Closed 15 years ago

pangox.h includes should be removed

Categories

(Core :: Graphics, defect)

1.9.2 Branch
x86
Linux
defect
Not set
trivial

Tracking

()

RESOLVED FIXED
mozilla1.9.3a1
Tracking Status
status1.9.2 --- beta4-fixed

People

(Reporter: nirbheek.chauhan, Assigned: nirbheek.chauhan)

References

()

Details

Attachments

(1 file)

User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9.2b2) Gecko/20091112 Gentoo Firefox/3.6b2 Build Identifier: Sometime during the 1.9.1 cycle, pangox got replaced by pangoxft for fonts, but the headers are still around. pangox has been deprecated[1][2] upstream for a while now, hence there's no point keeping the header includes around. This is part of our downstream (Gentoo) effort[3] to remove usage of pangox in ebuilds. # pango/pangox.h is included $ grep -re pangox\.h . ./config/system-headers:pango/pangox.h ./js/src/config/system-headers:pango/pangox.h ./gfx/src/thebes/nsThebesDeviceContext.cpp:#include <pango/pangox.h> # But no pango_x_* functions are used $ grep -re pango_x_ . $ This seems to render bug 323671 obsolete as well. 1. http://git.gnome.org/cgit/pango/tree/pango/pangox.h#n33 2. http://library.gnome.org/devel/pango/stable/pango-X-Fonts-and-Rendering.html 3. http://bugs.gentoo.org/show_bug.cgi?id=293368 Reproducible: Always I have tested that removing pangox.h from includes (and from the system) allows xulrunner to build without any problems, and firefox starts up without any problems as well.
Version: unspecified → 1.9.2 Branch
Were you going to post the patch?
Component: Layout: Text → Graphics
QA Contact: layout.fonts-and-text → thebes
Status: UNCONFIRMED → NEW
Ever confirmed: true
Right, the patch is pretty straightforward :)
Attachment #412656 - Flags: approval1.9.2?
Comment on attachment 412656 [details] [diff] [review] Remove pangox.h includes Thank you. Please add the checkin-needed keyword if you'd like someone to push this to trunk. This would be fine on 1.9.2 also, but that's not my decision to make.
Attachment #412656 - Flags: review?(mozbugz) → review+
(In reply to comment #3) > (From update of attachment 412656 [details] [diff] [review]) > Thank you. Please add the checkin-needed keyword if you'd like someone to push > this to trunk. > Added, thank you for your help > This would be fine on 1.9.2 also, but that's not my decision to make. I added "wanted1.9.2 ?" since this also affects the ebuilds we have which use the official release packages (instead of building from source). Hence we'd like it if this could go into 1.9.2.
Flags: wanted1.9.2?
Keywords: checkin-needed
Assignee: nobody → nirbheek.chauhan
Status: NEW → RESOLVED
Closed: 15 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.9.3a1
Comment on attachment 412656 [details] [diff] [review] Remove pangox.h includes a1.9.2=dbaron
Attachment #412656 - Flags: approval1.9.2? → approval1.9.2+
Whiteboard: [checkin needed for 1.9.2]
Flags: wanted1.9.2?
Keywords: checkin-needed
Whiteboard: [checkin needed for 1.9.2]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: