Bug 528941 - Remove pangox.h includes. r=karlt